// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deletes all projects 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="qualifiers.delete.TRK"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      qualifiers.delete.TRK
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="alert alert-warning modal-alert"
    >
      <AlertWarnIcon
        className="spacer-right"
      />
      projects_management.delete_all_warning.17
    </div>
    qualifiers.delete_confirm.TRK
  </div>
  <footer
    className="modal-foot"
  >
    <button
      className="button-red"
      disabled={false}
      onClick={[Function]}
    >
      delete
    </button>
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;

exports[`deletes all projects 2`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="qualifiers.delete.TRK"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      qualifiers.delete.TRK
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="alert alert-warning modal-alert"
    >
      <AlertWarnIcon
        className="spacer-right"
      />
      projects_management.delete_all_warning.17
    </div>
    qualifiers.delete_confirm.TRK
  </div>
  <footer
    className="modal-foot"
  >
    <i
      className="spinner spacer-right"
    />
    <button
      className="button-red"
      disabled={true}
      onClick={[Function]}
    >
      delete
    </button>
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;

exports[`deletes selected projects 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="qualifiers.delete.TRK"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      qualifiers.delete.TRK
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="alert alert-warning modal-alert"
    >
      <AlertWarnIcon
        className="spacer-right"
      />
      projects_management.delete_selected_warning.2
    </div>
    qualifiers.delete_confirm.TRK
  </div>
  <footer
    className="modal-foot"
  >
    <button
      className="button-red"
      disabled={false}
      onClick={[Function]}
    >
      delete
    </button>
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;

exports[`deletes selected projects 2`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="qualifiers.delete.TRK"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      qualifiers.delete.TRK
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="alert alert-warning modal-alert"
    >
      <AlertWarnIcon
        className="spacer-right"
      />
      projects_management.delete_selected_warning.2
    </div>
    qualifiers.delete_confirm.TRK
  </div>
  <footer
    className="modal-foot"
  >
    <i
      className="spinner spacer-right"
    />
    <button
      className="button-red"
      disabled={true}
      onClick={[Function]}
    >
      delete
    </button>
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;
